# LAVIME

./: .gitignore  README.md  main.py  myst.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
figs/: analise-grafica.html
ipynb/: 01-introMetnum.ipynb  02-erros.ipynb  04-bissecao.ipynb  05-newton.ipynb  06-matrizes-vetores.ipynb  07-fatoracao-lu.ipynb  08-jacobi-seidel.ipynb  09-newton-nao-linear.ipynb  10-interpolacao-newton.ipynb  11-minimos-quadrados.ipynb  12-ajusteNaoLinear.ipynb  13-integracao-newtonCotes.ipynb  14-quadratura-gaussiana.ipynb  15-diferenciacao-numerica.ipynb  16-solucoes-edo.ipynb  17-metodo-euler.ipynb  18-taylor-rungeKutta.ipynb  99-14-interpolacao-lagrange.ipynb  aula-02-erros.ipynb  aula-05-newton.ipynb  aula-07-fatoracao-lu.ipynb  aula-08-jacobi-seidel.ipynb  aula-10-interpolacao-newton.ipynb  aula-11-minimos-quadrados.ipynb  aula-12-ajusteNaoLinear.ipynb  aula-13-integracao-newtonCotes.ipynb  aula-14-quadratura-gaussiana.ipynb  conteudo.ipynb
ipynb/code-sessions/: codeSession-1-polyval.ipynb  codeSession-2-bisect.ipynb  codeSession-3-newton.ipynb  codeSession-4-solve.ipynb  codeSession-5-fsolve.ipynb  codeSession-6-interp.ipynb  codeSession-7-fit.ipynb
ipynb/extra/: extra-edoSuperior.ipynb  extra-eulerMelhorado.ipynb  extra-pontoFlutuante.ipynb
styles/: custom.css
