[project]
name = "lavime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter-book>=2.1.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "prettytable>=3.17.0",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]
