[project]
name = "lavime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bokeh>=3.9.0",
    "dash>=4.1.0",
    "ipykernel>=7.2.0",
    "jupyter-book>=2.1.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "prettytable>=3.17.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "sympy>=1.14.0",
]
